2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* configure.ac (STATIC_GLIBC): Remove.

2008-02-01  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't check for fig2dev.  Check for inkscape.

2008-01-26  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't check for latex, dvips or ps2pdf.  Check for
	pdflatex and bibtex.

2008-01-26  Thomas Schwinge  <tschwinge@gnu.org>

	* configure.ac (ABS_SRCDIR): Use ``readlink -f'' instead of
	``realpath''.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* README: Update build instructions.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (LIBC_M): Set to location of C math library.
	Substitute.
	* libc.a.in: Add @LIBC_M@.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* libc.a.in: New file.
	* configure.ac (LIBC): Set to location of C library files.
	Substitute.
	(LIBC_A): Set to location of C library archive.  Substitute.
	(ABS_BUILDDIR): Set to absolute location of build directory.
	Substitute.
	(ABS_SRCDIR): Set to absolute location of source directory.
	Substitute.
	Generate libc.a.

	* Makefile.am (SUBDIRS): Build C library as earlier.

2008-01-17  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Check for ln.
	Add new option --with-newlib.
	Generate newlib/Makefile.
	* Makefile.am (NEWLIB_SUBDIRS): New variable.
	(SUBDIRS): Add it.
	* newlib: New directory.
	
2008-01-13  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Add -fno-stack-protector.

2008-01-02  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (CFLAGS): Make the default optimization level -O2.

2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't use AC_C_CONST or AC_C_VOLATILE.  The former
	doesn't work with -Werror and we assume gcc.
	
2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Don't overwrite the value of CFLAGS, add to it.

2007-12-11  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Update email address.

2007-11-23  Neal H. Walfield  <neal@gnu.org>
